removed cover and profile pic upload buttons when displaying other users profiles - fixed issue with absolute positioning of cover pic container overlapping name

--- a/src/components/Profile/NavigationBar/NavigationBar.css
+++ b/src/components/Profile/NavigationBar/NavigationBar.css
@@ -212,16 +212,27 @@
 
 .EditControl {
     height: 42px;
+    min-width: 42px;
     position: relative;
     top: 1px;
     margin: 5px;
-    padding: 13px;
-    box-sizing: border-box;
-    text-align: center;
-    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 8px;
     background-color: #e6e6e6;
     cursor: pointer;
+}
+
+.EditControlIcon {
+    height: 20px;
+    width: 20px;
+}
+
+.EditControlIcon svg {
+    height: auto;
+    width: 100%;
+    position: relative;
 }
 
 .FirstControlButton {
@@ -351,13 +362,23 @@
     right: 2px;
 }
 
-.EditControls li:hover {
-    background: #d4d4d4;
+.EditControl:hover {
+    background: rgba(0,0,0,0.15);
 }
 
 .EditControls svg {
     height: 100%;
     width: auto;
+}
+
+.DotsIcon {
+    height: 14px;
+    width: 14px;
+}
+
+.DotsIcon svg {
+    position: relative;
+    bottom: 1px;
 }
 
 .Break {
